# ps_2_ex3_database

./: .gitignore  pyproject.toml  warm_up.ipynb
